<resources>
    <string name="app_name">GHB</string>
    <string name="action_settings">Settings</string>
    <string name="btn_refresh">Refresh</string>
    <string name="progress_dialog_message">Updating Traffic-Usage</string>
    <string name="settings_api_group">API-Settings</string>
    <string name="settings_api_key">API-Key</string>
    <string name="settings_about_group">About</string>
    <string name="settings_about">About</string>
    <string name="settings_about_summary">
        Created and developed by \n
        \t Jan-Henrik Preuss (Doofmars) 2015 AIB6 \n \n
        Android Implementation of the GHB and ASK API to display your daily traffic usage.
    </string>
    <string name="settings_about_usage">Usage:</string>
    <string name="settings_about_usage_summary">
        1: Start the application and open settings.\n
        2: Enter your application key which you can obtain here https://ghb.hs-furtwangen.de/api or here https://ask.hs-furtwangen.de/api, if you are logged in. \n
        3: Optional: choose your current dorm and close the settings.\n
        Hint: Update the Traffic-Report by pulling down on the main screen.
    </string>
    <string name="settings_about_contribute">Contribute:</string>
    <string name="settings_about_contribute_summary">
        The source code is released under MIT-Licence \n
        https://github.com/doofmars/GHB-Traffic
    </string>
    <string name="settings_api_key_summary">Input your API-Key here</string>
    <string name="pie_chart_center_label">Traffic by Host</string>
    <string name="pie_chart_legend_label">Hosts</string>
    <string name="general_fragment_title">Traffic-Usage</string>
    <string name="general_fragment_message">Pull Down to Refresh</string>
    <string name="traffic_report_key">trafficReport</string>
    <string name="message_api_key">No API-Key is set.</string>
    <string name="default_dorm_name">GHB</string>
    <string name="settings_dorm_name_summary">Select your dorm here</string>
    <string name="settings_dorm_name">Dorm-Name</string>
    <string name="settings_get_api_key_GHB">Get the GHB-API-Key</string>
    <string name="settings_get_api_key_summary">Where to get the API-Key</string>
    <string name="settings_get_api_key_ASK">Get the ASK-API-Key</string>

    <string name="error_key">The API-Key or dorm name is invalid</string>
    <string name="error_parse">Could not parse the API-Data</string>
    <string name="error_fetch">Could not fetch the API-Data</string>
    <string name="general_fragment_image_description">Pull Down</string>

    <string-array name="dorm_names">
        <item>"ASK"</item>
        <item>"GHB"</item>
    </string-array>
</resources>
